; ModuleID = '/home/carl/AnghaBench/jerryscript/targets/curie_bsp/jerry_app/quark/extr_main.c_jerry_start.c'
source_filename = "/home/carl/AnghaBench/jerryscript/targets/curie_bsp/jerry_app/quark/extr_main.c_jerry_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JERRY_INIT_EMPTY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"print\00", align 1
@print_function = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @jerry_start() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i64 (...) @jerry_port_get_current_time()
  %4 = trunc i64 %3 to i32
  %5 = call i32 @srand(i32 %4)
  %6 = load i32, i32* @JERRY_INIT_EMPTY, align 4
  %7 = call i32 @jerry_init(i32 %6)
  %8 = call i32 (...) @jerry_get_global_object()
  store i32 %8, i32* %1, align 4
  %9 = call i32 @jerry_create_string(i32* bitcast ([6 x i8]* @.str to i32*))
  store i32 %9, i32* %2, align 4
  %10 = load i32, i32* %1, align 4
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @jerry_get_property(i32 %10, i32 %11)
  store i32 %12, i32* @print_function, align 4
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @jerry_release_value(i32 %13)
  %15 = load i32, i32* %1, align 4
  %16 = call i32 @jerry_release_value(i32 %15)
  ret void
}

declare dso_local i32 @srand(i32) #1

declare dso_local i64 @jerry_port_get_current_time(...) #1

declare dso_local i32 @jerry_init(i32) #1

declare dso_local i32 @jerry_get_global_object(...) #1

declare dso_local i32 @jerry_create_string(i32*) #1

declare dso_local i32 @jerry_get_property(i32, i32) #1

declare dso_local i32 @jerry_release_value(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
